Prevent main content from overlapping user menu
In mobile the user menu was being overlapped by the main content.
To fix this we just needed to update the z-index of the user menu.

rancher/rancher#21914

--- a/app/styles/components/_identity-block.scss
+++ b/app/styles/components/_identity-block.scss
@@ -2,6 +2,9 @@
 
   &.block-wide {
     width: 30vw;
+    body.touch & {
+      width: 50vw;
+    }
   }
 
   .gh-block-name > div {
