--- a/app/styles/components/_page-header.scss
+++ b/app/styles/components/_page-header.scss
@@ -108,6 +108,8 @@ $project-nav-active: $dropdown-link-hover-bg !default;
   .nav-user {
     border-radius: 0 3px 3px 0;
     margin: 0;
+    position: relative;
+    z-index: 4;
 
     .nav-item {
       a.nav-link {
